<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MyCartListActivity">

    <ImageButton
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_margin="20dp"
        android:background="@drawable/button_ripple"
        android:contentDescription="@string/back_arrow"
        android:onClick="backArrow"
        android:src="@drawable/ic_back_arrow" />

    <LinearLayout
        android:id="@+id/continueShoppingLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cart_is_empty"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:onClick="continueShopping"
            android:text="@string/continue_shopping"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/cartListRecyclerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartListRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:visibility="visible" />

        <Button
            android:id="@+id/checkOutButtonId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:elevation="15dp"
            android:onClick="checkOutFromCartList"
            android:text="@string/check_out"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textStyle="bold"
            tools:targetApi="lollipop" />

    </RelativeLayout>

</LinearLayout>